.provarCaches/00D5f000005vwGkEAI/objects/rstk__syreg__c.object
<CustomObject>
    <description>syreg__c</description>
    <fields>
        <fullName>rstk__syreg_attribute__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Attribute</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syreg_control__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Control</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syreg_longvalue__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Long Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syreg_page__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Page Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syreg_syusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Manufacturing Users</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>System Options</relationshipLabel>
        <relationshipName>System_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syreg_value__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>System Options by User</label>
    <listViews>
        <fullName>rstk__RS_System_Options</fullName>
        <columns>NAME</columns>
        <columns>rstk__syreg_syusr__c</columns>
        <columns>rstk__syreg_page__c</columns>
        <columns>rstk__syreg_attribute__c</columns>
        <columns>rstk__syreg_control__c</columns>
        <columns>rstk__syreg_value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>System Options</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_System_Options_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstk__syreg_syusr__c</columns>
        <columns>rstk__syreg_page__c</columns>
        <columns>rstk__syreg_attribute__c</columns>
        <columns>rstk__syreg_control__c</columns>
        <columns>rstk__syreg_value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__syreg_syusr__c</field>
            <operation>contains</operation>
            <value>Rod Petersen</value>
        </filters>
        <label>System Options - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>System Options by User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>